добавление html разметки шапки

--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,39 @@
     <link rel="stylesheet" href="css/style.min.css">
     <title>Document</title>
 </head>
-<body>
-    <header>
-        
+<body class="body">
+    <header class="header">
+        <div class="container-fluid header__wrapper">
+            <div class="row">
+                <div class="col-lg-3">
+                    <img src="#" alt="" class="header__logo-img">
+                </div>
+                <div class="col-lg-8">
+                    <nav class="header__navigation">
+                        <ul class="header__list d-flex">
+                            <li class="header__item">
+                                Home
+                            </li>
+                            <li class="header__item">
+                                About Us
+                            </li>
+                            <li class="header__item">
+                                How it works
+                            </li>
+                            <li class="header__item">
+                                Categories
+                            </li>
+                            <li class="header__item">
+                                Testimony
+                            </li>
+                            <li class="header__item">
+                                Sing up
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+        </div>
     </header>
 </body>
 </html>
