добавление html разметки промо блока

--- a/src/index.html
+++ b/src/index.html
@@ -55,7 +55,28 @@
         </div>
     </header>
     <main class="main">
-
+        <article class="promo-text">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6">
+                        <section class="promo-text__text-information">
+                            <p class="promo-text__treatment-to-the-client">
+                                Are you looking for woodden furniture for your place?
+                            </p>
+                            <h2 class="promo-text__title">
+                                This is the Right Place
+                            </h2>
+                            <button type="button" class="promo-text__button">
+                                Explore Furniture
+                            </button>
+                        </section>
+                    </div>
+                </div>
+                <div class="promo-text__block-image">
+    
+                </div>
+            </div>
+        </article>
     </main>
 </body>
 </html>
