добавление стилей для промо блока

--- a/src/index.html
+++ b/src/index.html
@@ -61,7 +61,7 @@
                     <div class="col-lg-6">
                         <section class="promo-text__text-information">
                             <p class="promo-text__treatment-to-the-client">
-                                Are you looking for woodden furniture for your place?
+                                Are you looking for <span>woodden furniture</span> for your place?
                             </p>
                             <h2 class="promo-text__title">
                                 This is the Right Place
