добавление блока услуг и редактирования заколовков блоков

--- a/src/index.html
+++ b/src/index.html
@@ -77,22 +77,26 @@
                 </div>
             </div>
         </article>
-        <article class="about-us">
+        <section class="header-block">
             <div class="container">
                 <div class="row">
-                <div class="about-us__title-block w-100 d-flex justify-content-between">
-                        <div class="col-lg-4 align-self-center">
-                            <p class="about-us__promo-about-us">
-                                Who we are
-                            </p>
-                        </div>
-                        <div class="col-lg-5">
-                            <p class="about-us__about-us-large-text">
-                                ABOUT US
-                            </p>
+                    <div class="header-block__title-block w-100 d-flex justify-content-between">
+                            <div class="col-lg-3 align-self-center">
+                                <p class="header-block__promo-text">
+                                    Who we are
+                                </p>
+                            </div>
+                            <div class="col-lg-5">
+                                <p class="header-block__promo-text-large">
+                                    ABOUT US
+                                </p>
+                            </div>
                         </div>
                     </div>
-                </div>
+            </div> 
+        </section>
+                <article class="about-us main__about-us">
+                    <div class="container">
                 <div class="row">
                     <section class="about-us__wooden-furniture-manufacturing-services d-flex justify-content-between">
                         <div class="col-lg-5">
@@ -126,6 +130,66 @@
                 </div>
                 <img src="images/custom-tovary.png" alt="" class="about-us__img-custom-furniture">
             </div>
+        </article>
+        <section class="header-block">
+            <div class="container">
+                <div class="row">
+                    <div class="header-block__title-block w-100 d-flex justify-content-between">
+                            <div class="col-lg-4 align-self-center">
+                                <p class="header-block__promo-text header-block__promo-text-ordering">
+                                    How to custom
+                                </p>
+                            </div>
+                            <div class="col-lg-8">
+                                <p class="header-block__promo-text-large">
+                                    HOW IT WORKS
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+            </div> 
+        </section>
+        <article class="services">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-3">
+                        <section class="services__item">
+                            <img src="images/shop.png" alt="" class="services__img">
+                            <span>1</span>
+                            <p class="services__description">
+                                Choose Design
+                            </p>
+                        </section>
+                    </div>
+                    <div class="col-lg-3">
+                        <section class="services__item">
+                            <img src="images/ruler.png" alt="" class="services__img">
+                            <span>2</span>
+                            <p class="services__description">
+                                Area measuring
+                            </p>
+                        </section>
+                    </div>
+                    <div class="col-lg-3">
+                        <section class="services__item">
+                            <img src="images/cost.png" alt="" class="services__img">
+                            <span>3</span>
+                            <p class="services__description">
+                                Budgeting
+                            </p>
+                        </section>
+                    </div>
+                    <div class="col-lg-3">
+                        <section class="services__item">
+                            <img src="images/carpenter.png" alt="" class="services__img">
+                            <span>4</span>
+                            <p class="services__description">
+                                Production
+                            </p>
+                        </section>
+                    </div>
+                </div>
+            </div>        
         </article>
     </main>
 </body>
