добавление кнопки в блоке услуг

--- a/src/index.html
+++ b/src/index.html
@@ -188,9 +188,13 @@
                             </p>
                         </section>
                     </div>
+                    <div class="col-12 text-center">
+                        <button class="services__button">Get Personalized Now</button>
+                    </div>
                 </div>
             </div>        
         </article>
+        
     </main>
 </body>
 </html>
