добавления разметки блока услуг

--- a/src/index.html
+++ b/src/index.html
@@ -194,7 +194,65 @@
                 </div>
             </div>        
         </article>
-        
+        <section class="header-block">
+            <div class="container">
+                <div class="row">
+                    <div class="header-block__title-block w-100 d-flex justify-content-between">
+                            <div class="col-lg-4 align-self-center">
+                                <p class="header-block__promo-text header-block__promo-text-category">
+                                    What we have
+                                </p>
+                            </div>
+                            <div class="col-lg-8">
+                                <p class="header-block__promo-text-large">
+                                    CATEGORIES
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+            </div> 
+        </section>
+        <article class="сategory">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-4">
+                        <section class="category__item">
+                            <h2 class="category__title">Desk</h2>
+                            <img src="images/stol.png" alt="" class="category__img">
+                            <button class="category__button">Shop Now</button>
+                        </section>
+                    </div>
+                    <div class="col-lg-4">
+                        <section class="category__item">
+                            <h2 class="category__title">Chair</h2>
+                            <img src="images/styl.png" alt="" class="category__img">
+                            <button class="category__button">Shop Now</button>
+                        </section>
+                    </div>
+                    <div class="col-lg-4">
+                        <section class="category__item">
+                            <h2 class="category__title">Kitchenware</h2>
+                            <img src="images/4achki.png" alt="" class="category__img">
+                            <button class="category__button">Shop Now</button>
+                        </section>
+                    </div>
+                    <div class="col-lg-4">
+                        <section class="category__item">
+                            <h2 class="category__title">Book Shelf</h2>
+                            <img src="images/polka.png" alt="" class="category__img">
+                            <button class="category__button">Shop Now</button>
+                        </section>
+                    </div>
+                    <div class="col-lg-4">
+                        <section class="category__item">
+                            <h2 class="category__title">Electronics</h2>
+                            <img src="images/magnitofon.png" alt="" class="category__img">
+                            <button class="category__button">Shop Now</button>
+                        </section>
+                    </div>
+                </div>
+            </div>
+        </article>
     </main>
 </body>
 </html>
