добавление стилей для блока категорий

--- a/src/index.html
+++ b/src/index.html
@@ -215,7 +215,7 @@
                     <div class="col-lg-4">
                         <section class="category__item">
                             <h2 class="category__title">Desk</h2>
-                            <img src="images/stol.png" alt="" class="category__img">
+                            <img src="images/stol.png" alt="" class="category__img category__the-first-picture">
                             <button class="category__button">Shop Now</button>
                         </section>
                     </div>
