добавление цветов блоков категорий

--- a/src/index.html
+++ b/src/index.html
@@ -220,14 +220,14 @@
                         </section>
                     </div>
                     <div class="col-lg-4">
-                        <section class="category__item">
+                        <section class="category__item category__item--peach-color">
                             <h2 class="category__title">Chair</h2>
                             <img src="images/styl.png" alt="" class="category__img">
                             <button class="category__button">Shop Now</button>
                         </section>
                     </div>
                     <div class="col-lg-4">
-                        <section class="category__item">
+                        <section class="category__item category__item--blue-color">
                             <h2 class="category__title">Kitchenware</h2>
                             <img src="images/4achki.png" alt="" class="category__img">
                             <button class="category__button">Shop Now</button>
@@ -241,7 +241,7 @@
                         </section>
                     </div>
                     <div class="col-lg-4">
-                        <section class="category__item">
+                        <section class="category__item category__item--peach-color">
                             <h2 class="category__title">Electronics</h2>
                             <img src="images/magnitofon.png" alt="" class="category__img">
                             <button class="category__button">Shop Now</button>
