добавление разметки блока отзывов

--- a/src/index.html
+++ b/src/index.html
@@ -193,7 +193,7 @@
             </div>        
         </article>
         
-        <article class="сategory">
+        <article class="сategory main__сategory">
             <div class="container">
                 <section class="header-block">
                     <div class="row">
@@ -245,6 +245,62 @@
                             <h2 class="category__title">Electronics</h2>
                             <img src="images/magnitofon.png" alt="" class="category__img">
                             <button class="category__button">Shop Now</button>
+                        </section>
+                    </div>
+                </div>
+            </div>
+        </article>
+        <article class="reviews">
+            <div class="container">
+                <section class="header-block">
+                    <div class="row">
+                        <div class="header-block__title-block w-100 d-flex justify-content-between">
+                            <div class="col-lg-4 align-self-center">
+                                <p class="header-block__promo-text">
+                                    What they say
+                                </p>
+                            </div>
+                            <div class="col-lg-5">
+                                <p class="header-block__promo-text-large">
+                                    TESTIMONY
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <div class="row">
+                    <div class="col-lg-3">
+                        <img src="images/pervaikartinka.png" alt="" class="reviews__img">
+                    </div>
+                    <div class="col-lg-3">
+                        <img src="images/vtoraikartinka.png" alt="" class="reviews__img">
+                    </div>
+                    <div class="col-lg-6">
+                        <section class="reviews__item">
+                            <img src="images/zvezdi.png" alt="" class="reviews__rating">
+                            <p class="reviews__opinion">
+                                My experience with WOODIES is a complete success, from customed furniture, range of product, modern design, purchasing experience, the delivery and newsletter. Litterally everything is great. Thank you!
+                            </p>
+                            <div class="reviews__name-and-photo">
+                                <img src="images/photoavtora.png" alt="" class="reviews__reviews-photo-img">
+                                <p class="reviews__name-author">
+                                    Sandra Dewi<br> Jakarta Selatan
+                                </p>
+                            </div>
+                            <div class="reviews__the-control-buttons-reviews">
+                                <button class="reviews__previous">
+
+                                </button>
+                                <button class="reviews__next">
+                                    
+                                </button>
+                            </div>
+                            <div class="reviews__the-position-of-opinion">
+                                <span class="reviews__button1"></span>
+                                <span class="reviews__button2"></span>
+                                <span class="reviews__button3"></span>
+                                <span class="reviews__button4"></span>
+                            </div>
                         </section>
                     </div>
                 </div>
