добавление стилей для блока обратной связи

--- a/src/index.html
+++ b/src/index.html
@@ -250,7 +250,7 @@
                 </div>
             </div>
         </article>
-        <article class="reviews">
+        <article class="reviews main__reviews">
             <div class="container">
                 <section class="header-block">
                     <div class="row">
@@ -275,31 +275,33 @@
                     <div class="col-lg-3">
                         <img src="images/vtoraikartinka.png" alt="" class="reviews__img">
                     </div>
-                    <div class="col-lg-6">
+                    <div class="col-lg-6 align-self-center">
                         <section class="reviews__item">
                             <img src="images/zvezdi.png" alt="" class="reviews__rating">
                             <p class="reviews__opinion">
                                 My experience with WOODIES is a complete success, from customed furniture, range of product, modern design, purchasing experience, the delivery and newsletter. Litterally everything is great. Thank you!
                             </p>
-                            <div class="reviews__name-and-photo">
+                            <div class="reviews__name-and-photo d-flex">
                                 <img src="images/photoavtora.png" alt="" class="reviews__reviews-photo-img">
                                 <p class="reviews__name-author">
                                     Sandra Dewi<br> Jakarta Selatan
                                 </p>
                             </div>
-                            <div class="reviews__the-control-buttons-reviews">
+                        </section>
+                        <section class="reviews__wrapper-for-the-buttons">
+                            <div class="reviews__the-control-buttons-reviews d-flex justify-content-between">
                                 <button class="reviews__previous">
-
+                                    Previous
                                 </button>
                                 <button class="reviews__next">
-                                    
+                                    Next
                                 </button>
                             </div>
-                            <div class="reviews__the-position-of-opinion">
-                                <span class="reviews__button1"></span>
-                                <span class="reviews__button2"></span>
-                                <span class="reviews__button3"></span>
-                                <span class="reviews__button4"></span>
+                            <div class="reviews__the-position-of-opinion d-flex justify-content-end">
+                                <span class="reviews__button reviews__button--active"></span>
+                                <span class="reviews__button"></span>
+                                <span class="reviews__button"></span>
+                                <span class="reviews__button"></span>
                             </div>
                         </section>
                     </div>
