добавление разметки и стилей блока подписки

--- a/src/index.html
+++ b/src/index.html
@@ -308,7 +308,28 @@
                 </div>
             </div>
         </article>
-        
+        <footer>
+            <article class="subscription">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-6">
+                            <h2 class="subscription__title">
+                                Subscribe to our newsletter
+                            </h2>
+                            <p class="subscription__subtitle">
+                                A monthly digest of the new WOODIES products, hot offers, and resources.
+                            </p>
+                        </div>
+                        <div class="col-lg-6">
+                            <input type="text" class="subscription__input-email" placeholder="Your email address">
+                            <button class="subscription__button">
+                                Subscribe
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </article>
+        </footer>
     </main>
 </body>
 </html>
