--- a/src/index.html
+++ b/src/index.html
@@ -308,7 +308,7 @@
                 </div>
             </div>
         </article>
-        <footer>
+        <footer class="footer">
             <article class="subscription">
                 <div class="container">
                     <div class="row">
@@ -320,11 +320,102 @@
                                 A monthly digest of the new WOODIES products, hot offers, and resources.
                             </p>
                         </div>
-                        <div class="col-lg-6">
+                        <div class="col-lg-6 text-right">
                             <input type="text" class="subscription__input-email" placeholder="Your email address">
                             <button class="subscription__button">
                                 Subscribe
                             </button>
+                        </div>
+                    </div>
+                </div>
+            </article>
+            <article class="lower-part-footer">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-4">
+                            <section class="lower-part-footer__block">
+                                <h2 class="lower-part-footer__title">
+                                    WOODIES
+                                </h2>
+                                <p class="lower-part-footer__item">
+                                    (012) 8967453
+                                </p>
+                                <p class="lower-part-footer__item">
+                                    woodies@gmail.com
+                                </p>
+                                <p class="lower-part-footer__item">
+                                    Jakarta, Indonesia
+                                </p>
+                            </section>
+                        </div>
+                        <div class="col-lg-2">
+                            <section class="lower-part-footer__block">
+                                <h2 class="lower-part-footer__title">
+                                    Product
+                                </h2>
+                                <p class="lower-part-footer__item">
+                                    Furnitures
+                                </p>
+                                <p class="lower-part-footer__item">
+                                    Packages
+                                </p>
+                                <p class="lower-part-footer__item">
+                                    Services
+                                </p>
+                            </section>
+                        </div>
+                        <div class="col-lg-2">
+                            <section class="lower-part-footer__block">
+                                <h2 class="lower-part-footer__title">
+                                    Resources
+                                </h2>
+                                <p class="lower-part-footer__item">
+                                    Blog
+                                </p>
+                                <p class="lower-part-footer__item">
+                                    FAQs
+                                </p>
+                                <p class="lower-part-footer__item">
+                                    Contact Us
+                                </p>
+                            </section>
+                        </div>
+                        <div class="col-lg-2">
+                            <section class="lower-part-footer__block">
+                                <h2 class="lower-part-footer__title">
+                                    Company
+                                </h2>
+                                <p class="lower-part-footer__item">
+                                    About Us
+                                </p>
+                                <p class="lower-part-footer__item">
+                                    Jobs
+                                </p>
+                                <p class="lower-part-footer__item">
+                                    Our Team
+                                </p>
+                            </section>
+                        </div>
+                        <div class="col-lg-2">
+                            <section class="lower-part-footer__block">
+                                <h2 class="lower-part-footer__title">
+                                    Follow Us
+                                </h2>
+                                <p class="lower-part-footer__item">
+                                    Facebook
+                                </p>
+                                <p class="lower-part-footer__item">
+                                    Instagram
+                                </p>
+                                <p class="lower-part-footer__item">
+                                    Twitter
+                                </p>
+                            </section>
+                        </div>
+                        <div class="col-12">
+                            <p class="copywriting">
+                                © 2020 WOODIES
+                            </p>
                         </div>
                     </div>
                 </div>
