добавление стилей для футера

--- a/src/index.html
+++ b/src/index.html
@@ -309,7 +309,7 @@
             </div>
         </article>
         <footer class="footer">
-            <article class="subscription">
+            <article class="subscription main__subscription">
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-6">
@@ -332,9 +332,9 @@
             <article class="lower-part-footer">
                 <div class="container">
                     <div class="row">
-                        <div class="col-lg-4">
+                        <div class="col-lg-3">
                             <section class="lower-part-footer__block">
-                                <h2 class="lower-part-footer__title">
+                                <h2 class="lower-part-footer__title lower-part-footer__logo">
                                     WOODIES
                                 </h2>
                                 <p class="lower-part-footer__item">
