--- a/src/index.html
+++ b/src/index.html
@@ -6,18 +6,25 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700;800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <title>Document</title>
 </head>
 <body class="body">
     <header class="header body__header">
         <div class="container-fluid header__wrapper">
             <div class="row justify-content-between">
-                <div class="col-lg-3">
+                <div class="col-3 col-lg-3">
                     <img src="images/logo_header.png" alt="Логотип" class="header__logo-img">
                 </div>
-                <div class="col-lg-9 align-self-center">
+                <div class="col-1 col-md-12 col-lg-9 align-self-center">
+                    <button class="header__button">
+                        <i class="fa fa-bars" aria-hidden="true"></i>
+                    </button>
                     <nav class="header__navigation">
                         <ul class="header__list d-flex justify-content-between">
+                            <button class="header__button--close">
+                                <i class="fa fa-times" aria-hidden="true"></i>
+                            </button>
                             <li class="header__item">
                                 <a href="#" class="header__link header__item--active">
                                     Home
@@ -54,7 +61,7 @@
             </div>
         </div>
     </header>
-    <main class="main">
+    <!-- <main class="main">
         <article class="promo-text">
             <div class="container">
                 <div class="row">
@@ -421,6 +428,7 @@
                 </div>
             </div>
         </article>
-    </footer>
+    </footer> -->
+    <script src="js/main.min.js"></script>
 </body>
 </html>
