--- a/index.html
+++ b/index.html
@@ -1,28 +1,4 @@
-<!DOCTYPE html><html lang="ru"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous"><link rel="stylesheet" href="css/style.min.css"><link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700;800&display=swap" rel="stylesheet"><link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"><title>Document</title></head><body class="body"><header class="header body__header"><div class="container-fluid header__wrapper"><div class="row justify-content-between"><div class="col-3 col-lg-3"><img src="images/logo_header.png" alt="Логотип" class="header__logo-img"></div><div class="col-1 col-md-12 col-lg-9 align-self-center"><button class="header__button"><i class="fa fa-bars" aria-hidden="true"></i></button><nav class="header__navigation"><ul class="header__list d-flex justify-content-between"><button class="header__button--close"><i class="fa fa-times" aria-hidden="true"></i></button><li class="header__item"><a href="#" class="header__link header__item--active">Home</a></li><li class="header__item"><a href="#" class="header__link">About Us</a></li><li class="header__item"><a href="#" class="header__link">How it works</a></li><li class="header__item"><a href="#" class="header__link">Categories</a></li><li class="header__item"><a href="#" class="header__link">Testimony</a></li><li class="header__item"><a href="#" class="header__link header__link-sing-up">Sing up</a></li></ul></nav></div></div></div></header><!-- <main class="main">
-        <article class="promo-text">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-7">
-                        <section class="promo-text__text-information">
-                            <p class="promo-text__treatment-to-the-client">
-                                Are you looking for <span>woodden furniture</span> for your place?
-                            </p>
-                            <h2 class="promo-text__title">
-                                This is the Right Place
-                            </h2>
-                            <button type="button" class="promo-text__button">
-                                Explore Furniture
-                            </button>
-                        </section>
-                    </div>
-                </div>
-                <div class="promo-text__block-image">
-    
-                </div>
-            </div>
-        </article>
-        
-                <article class="about-us main__about-us">
+<!DOCTYPE html><html lang="ru"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous"><link rel="stylesheet" href="css/style.min.css"><link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700;800&display=swap" rel="stylesheet"><link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"><title>Document</title></head><body class="body"><header class="header body__header"><div class="container-fluid header__wrapper"><div class="row justify-content-between"><div class="col-3 col-lg-3"><img src="images/logo_header.png" alt="Логотип" class="header__logo-img"></div><div class="col-1 col-md-12 col-lg-9 align-self-center"><button class="header__button"><i class="fa fa-bars" aria-hidden="true"></i></button><nav class="header__navigation"><ul class="header__list d-flex justify-content-between"><button class="header__button--close"><i class="fa fa-times" aria-hidden="true"></i></button><li class="header__item"><a href="#" class="header__link header__item--active">Home</a></li><li class="header__item"><a href="#" class="header__link">About Us</a></li><li class="header__item"><a href="#" class="header__link">How it works</a></li><li class="header__item"><a href="#" class="header__link">Categories</a></li><li class="header__item"><a href="#" class="header__link">Testimony</a></li><li class="header__item"><a href="#" class="header__link header__link-sing-up">Sing up</a></li></ul></nav></div></div></div></header><main class="main"><article class="promo-text"><div class="container"><div class="row"><div class="col-sm-10 col-md-9 col-lg-7"><section class="promo-text__text-information"><p class="promo-text__treatment-to-the-client">Are you looking for <span>woodden furniture</span> for your place?</p><h2 class="promo-text__title">This is the Right Place</h2><button type="button" class="promo-text__button">Explore Furniture</button></section></div></div><div class="promo-text__block-image"></div></div></article><!-- <article class="about-us main__about-us">
                     <div class="container">
                         <section class="header-block">
                             <div class="row">
@@ -364,5 +340,4 @@
                     </div>
                 </div>
             </div>
-        </article>
-    </footer> --><script src="js/main.min.js"></script></body></html>
+        </article> --><script src="js/main.min.js"></script></main></body></html>
