--- a/src/index.html
+++ b/src/index.html
@@ -61,11 +61,11 @@
             </div>
         </div>
     </header>
-    <!-- <main class="main">
+    <main class="main">
         <article class="promo-text">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-7">
+                    <div class="col-sm-10 col-md-9 col-lg-7">
                         <section class="promo-text__text-information">
                             <p class="promo-text__treatment-to-the-client">
                                 Are you looking for <span>woodden furniture</span> for your place?
@@ -85,7 +85,7 @@
             </div>
         </article>
         
-                <article class="about-us main__about-us">
+                <!-- <article class="about-us main__about-us">
                     <div class="container">
                         <section class="header-block">
                             <div class="row">
@@ -427,8 +427,8 @@
                     </div>
                 </div>
             </div>
-        </article>
-    </footer> -->
+        </article> -->
+    </footer>
     <script src="js/main.min.js"></script>
 </body>
 </html>
