--- a/src/index.html
+++ b/src/index.html
@@ -159,7 +159,7 @@
 
                 </section>
                 <div class="row">
-                    <div class="col-lg-3">
+                    <div class="col-6 col-lg-3">
                         <section class="services__item">
                             <img src="images/shop.png" alt="" class="services__img">
                             <span>1</span>
@@ -168,7 +168,7 @@
                             </p>
                         </section>
                     </div>
-                    <div class="col-lg-3">
+                    <div class="col-6 col-lg-3">
                         <section class="services__item">
                             <img src="images/ruler.png" alt="" class="services__img">
                             <span>2</span>
@@ -177,7 +177,7 @@
                             </p>
                         </section>
                     </div>
-                    <div class="col-lg-3">
+                    <div class="col-6 col-lg-3">
                         <section class="services__item">
                             <img src="images/cost.png" alt="" class="services__img">
                             <span>3</span>
@@ -186,7 +186,7 @@
                             </p>
                         </section>
                     </div>
-                    <div class="col-lg-3">
+                    <div class="col-6 col-lg-3">
                         <section class="services__item">
                             <img src="images/carpenter.png" alt="" class="services__img">
                             <span>4</span>
