добавлен адаптивный режим для блока отзывы

--- a/src/index.html
+++ b/src/index.html
@@ -260,7 +260,7 @@
                 </div>
             </div>
         </article>
-        <!-- <article class="reviews main__reviews">
+        <article class="reviews main__reviews">
             <div class="container">
                 <section class="header-block">
                     <div class="row">
@@ -319,7 +319,7 @@
             </div>
         </article>
     </main>
-    <footer class="footer">
+    <!-- <footer class="footer">
         <article class="subscription main__subscription">
             <div class="container">
                 <div class="row">
