добавлен адаптивный режим для блока подписки

--- a/src/index.html
+++ b/src/index.html
@@ -263,26 +263,27 @@
         <article class="reviews main__reviews">
             <div class="container">
                 <section class="header-block">
-                    <div class="row">
-                        <div class="header-block__title-block w-100 d-flex justify-content-between">
-                            <div class="col-lg-4 align-self-center">
-                                <p class="header-block__promo-text">
-                                    What they say
-                                </p>
-                            </div>
-                            <div class="col-lg-5">
-                                <p class="header-block__promo-text-large">
-                                    TESTIMONY
-                                </p>
-                            </div>
+
+                    <div class="header-block__title-block w-100 d-flex justify-content-between">
+                        
+                            <p class="header-block__promo-text">
+                                What they say
+                            </p>
+                        <div class="header-block__hell">
+
                         </div>
+                            <p class="header-block__promo-text-large">
+                                TESTIMONY
+                            </p>
+                        
                     </div>
+
                 </section>
                 <div class="row">
-                    <div class="col-lg-3">
+                    <div class="col-sm-6 col-lg-3 text-center">
                         <img src="images/pervaikartinka.png" alt="" class="reviews__img">
                     </div>
-                    <div class="col-lg-3">
+                    <div class="col-sm-6 col-lg-3 text-center">
                         <img src="images/vtoraikartinka.png" alt="" class="reviews__img">
                     </div>
                     <div class="col-lg-6 align-self-center">
@@ -319,7 +320,7 @@
             </div>
         </article>
     </main>
-    <!-- <footer class="footer">
+    <footer class="footer">
         <article class="subscription main__subscription">
             <div class="container">
                 <div class="row">
@@ -340,7 +341,7 @@
                 </div>
             </div>
         </article>
-        <article class="lower-part-footer">
+        <!-- <article class="lower-part-footer">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-3">
@@ -430,8 +431,8 @@
                     </div>
                 </div>
             </div>
-        </article>
-    </footer> -->
+        </article> -->
+    </footer>
     <script src="js/main.min.js"></script>
 </body>
 </html>
