добавлен адаптивный режим для футера

--- a/src/index.html
+++ b/src/index.html
@@ -341,10 +341,10 @@
                 </div>
             </div>
         </article>
-        <!-- <article class="lower-part-footer">
+        <article class="lower-part-footer">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-3">
+                    <div class="col-6 col-sm-4 col-lg-3">
                         <section class="lower-part-footer__block">
                             <h2 class="lower-part-footer__title lower-part-footer__logo">
                                 WOODIES
@@ -360,7 +360,7 @@
                             </p>
                         </section>
                     </div>
-                    <div class="col-lg-2">
+                    <div class="col-6 col-sm-2 col-lg-2">
                         <section class="lower-part-footer__block">
                             <h2 class="lower-part-footer__title">
                                 Product
@@ -376,7 +376,7 @@
                             </p>
                         </section>
                     </div>
-                    <div class="col-lg-2">
+                    <div class="col-6 col-sm-2 col-lg-2">
                         <section class="lower-part-footer__block">
                             <h2 class="lower-part-footer__title">
                                 Resources
@@ -392,7 +392,7 @@
                             </p>
                         </section>
                     </div>
-                    <div class="col-lg-2">
+                    <div class="col-6 col-sm-2 col-lg-2">
                         <section class="lower-part-footer__block">
                             <h2 class="lower-part-footer__title">
                                 Company
@@ -408,7 +408,7 @@
                             </p>
                         </section>
                     </div>
-                    <div class="col-lg-2">
+                    <div class="col-6 col-sm-2 col-lg-2">
                         <section class="lower-part-footer__block">
                             <h2 class="lower-part-footer__title">
                                 Follow Us
@@ -431,7 +431,7 @@
                     </div>
                 </div>
             </div>
-        </article> -->
+        </article>
     </footer>
     <script src="js/main.min.js"></script>
 </body>
