--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
 					<div class="col-3 col-lg-3">
 						<img
 							src="images/logo_header.png"
-							alt="Логотип"
+							alt="logo"
 							class="header__logo-img"
 							/>
 					</div>
@@ -152,7 +152,7 @@
 					</div>
 					<img
 						src="images/custom-tovary.png"
-						alt=""
+						alt="Custom-made furniture"
 						class="about-us__img-custom-furniture"
 						/>
 				</div>
@@ -177,7 +177,7 @@
 					<div class="row">
 						<div class="col-6 col-lg-3">
 							<section class="services__item">
-								<img src="images/shop.png" alt="" class="services__img" />
+								<img src="images/shop.png" alt="Design" class="services__img" />
 								<span>1</span>
 								<p class="services__description">
 									Choose Design
@@ -186,7 +186,7 @@
 						</div>
 						<div class="col-6 col-lg-3">
 							<section class="services__item">
-								<img src="images/ruler.png" alt="" class="services__img" />
+								<img src="images/ruler.png" alt="Area measuring" class="services__img" />
 								<span>2</span>
 								<p class="services__description">
 									Area measuring
@@ -195,7 +195,7 @@
 						</div>
 						<div class="col-6 col-lg-3">
 							<section class="services__item">
-								<img src="images/cost.png" alt="" class="services__img" />
+								<img src="images/cost.png" alt="Budgeting" class="services__img" />
 								<span>3</span>
 								<p class="services__description">
 									Budgeting
@@ -204,7 +204,7 @@
 						</div>
 						<div class="col-6 col-lg-3">
 							<section class="services__item">
-								<img src="images/carpenter.png" alt="" class="services__img" />
+								<img src="images/carpenter.png" alt="Production" class="services__img" />
 								<span>4</span>
 								<p class="services__description">
 									Production
@@ -238,7 +238,7 @@
 								<h2 class="category__title">Desk</h2>
 								<img
 									src="images/stol.png"
-									alt=""
+									alt="Desk"
 									class="category__img category__the-first-picture"
 									/>
 								<button class="category__button">Shop Now</button>
@@ -247,28 +247,28 @@
 						<div class="col-sm-6 col-lg-4">
 							<section class="category__item category__item--peach-color">
 								<h2 class="category__title">Chair</h2>
-								<img src="images/styl.png" alt="" class="category__img" />
+								<img src="images/styl.png" alt="Chair" class="category__img" />
 								<button class="category__button">Shop Now</button>
 							</section>
 						</div>
 						<div class="col-sm-6 col-lg-4">
 							<section class="category__item category__item--blue-color">
 								<h2 class="category__title">Kitchenware</h2>
-								<img src="images/4achki.png" alt="" class="category__img" />
+								<img src="images/4achki.png" alt="Kitchenware" class="category__img" />
 								<button class="category__button">Shop Now</button>
 							</section>
 						</div>
 						<div class="col-sm-6 col-lg-4">
 							<section class="category__item">
 								<h2 class="category__title">Book Shelf</h2>
-								<img src="images/polka.png" alt="" class="category__img" />
+								<img src="images/polka.png" alt="Book Shelf" class="category__img" />
 								<button class="category__button">Shop Now</button>
 							</section>
 						</div>
 						<div class="col-sm-6 col-lg-4">
 							<section class="category__item category__item--peach-color">
 								<h2 class="category__title">Electronics</h2>
-								<img src="images/magnitofon.png" alt="" class="category__img" />
+								<img src="images/magnitofon.png" alt="Electronics" class="category__img" />
 								<button class="category__button">Shop Now</button>
 							</section>
 						</div>
@@ -294,14 +294,14 @@
 						<div class="col-sm-6 col-lg-3 text-center">
 							<img
 								src="images/pervaikartinka.png"
-								alt=""
+								alt="Bedroom"
 								class="reviews__img"
 								/>
 						</div>
 						<div class="col-sm-6 col-lg-3 text-center">
 							<img
 								src="images/vtoraikartinka.png"
-								alt=""
+								alt="Kitchen"
 								class="reviews__img"
 								/>
 						</div>
@@ -317,7 +317,7 @@
 								<div class="reviews__name-and-photo d-flex">
 									<img
 										src="images/photoavtora.png"
-										alt=""
+										alt="Photo"
 										class="reviews__reviews-photo-img"
 										/>
 									<p class="reviews__name-author">
