добавление всплывающих окон благодарности, исправление мелких багов адаптивного режима

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="ru" class="html">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -469,6 +469,21 @@
 				</div>
 			</article>
 		</footer>
+		<section class="popup-thanks-top-of-the-page">
+			<p class="popup-thanks-top-of-the-page__text">
+				До скорых встречь!
+			</p>
+		</section>
+		<section class="popup-thanks-center-of-the-page flex-column">
+			<button type="button" class="popup-thanks-center-of-the-page__close-button">
+				<i class="fa fa-times" aria-hidden="true"></i>
+			</button>
+			<p class="popup-thanks-center-of-the-page__text">
+				Благодарю за просмотр данного макета! Всегда рад обратной связи по почте <a href="mailto:vasilynikolaev3@gmail.com">vasilynikolaev3@gmail.com</a>.
+			</p>
+			<a target="_blank" href="https://github.com/uett" class="popup-thanks-center-of-the-page__link">Ссылка на профиль GitHub</a>
+			<a target="_blank" href="https://github.com/uett/Furniture_Shop" class="popup-thanks-center-of-the-page__link">Ссылка на репозиторий этого проекта</a>
+		</section>
 		<script src="js/main.min.js"></script>
 	</body>
 </html>
